--- a/dist.ini
+++ b/dist.ini
@@ -4,4 +4,30 @@ author  = John SJ Anderson <genehack@genehack.org>
 license = Perl_5
 copyright_holder = John SJ Anderson <genehack@genehack.org>
 
-[@Classic]
+[@Basic]
+[ExtraTests]
+[CriticTests]
+[PkgVersion]
+
+[Prereq]
+App::Cmd::Tester          = 0
+DBIx::Class::Core         = 0
+DBIx::Class::Schema       = 0
+DBIx::Class::TimeStamp    = 0
+DateTime                  = 0
+File::Basename            = 0
+File::Path                = 0
+File::Temp                = 0
+FindBin                   = 0
+Moose                     = 0
+MooseX::App::Cmd          = 0
+MooseX::App::Cmd::Command = 0
+MooseX::Declare           = 0
+MooseX::SimpleConfig      = 0
+Test::Class               = 0
+Test::Class::Load         = 0
+Test::File                = 0
+Test::More                = 0
+Try::Tiny                 = 0
+XML::Feed                 = 0
+namespace::autoclean      = 0
