--- a/dist.ini
+++ b/dist.ini
@@ -6,10 +6,10 @@ copyright_holder = John SJ Anderson <genehack@genehack.org>
 
 [@Basic]
 [ExtraTests]
-[CriticTests]
+[Test::Perl::Critic]
 [PkgVersion]
 
-[Prereq]
+[Prereqs]
 App::Cmd::Tester           = 0
 DBIx::Class::Core          = 0
 DBIx::Class::Schema        = 0
